Fix spacing

--- a/style2.css
+++ b/style2.css
@@ -431,7 +431,7 @@ area {
 }
 
 .section-subdescription {
-  padding: 0 70px;
+  padding: 0 70px 20px 70px;
   margin-top: -15px;
 }
 
